[project]
name = "random-walks"
version = "0.1.0"
description = "HW 2 - Random Walks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=0.29.3",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.0",
    "notebook>=7.3.2",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "panel>=1.6.1",
    "plotly>=6.0.0",
    "scipy>=1.15.1",
    "statsmodels>=0.14.4",
    "watchfiles>=1.0.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
